--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7.yaml
@@ -8,16 +8,16 @@ cxx_compiler:
 - vs2015
 numpy:
 - '1.11'
+openblas:
+- 0.3.3
 pin_run_as_build:
+  openblas:
+    max_pin: x.x.x
   python:
     min_pin: x.x
     max_pin: x.x
-  sundials:
-    max_pin: x.x
 python:
 - '3.7'
-sundials:
-- '2.7'
 zip_keys:
 - - python
   - c_compiler
