--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,7 @@ requirements:
   run:
     - sundials
     - python
+    - setuptools  # pkg_resources used
     - {{ pin_compatible('numpy') }}
 
 test:
@@ -41,7 +42,7 @@ test:
 
 about:
   home: https://github.com/bjodah/{{ name }}
-  license: BSD 2-Clause
+  license: BSD-2-Clause
   license_file: LICENSE
   summary: Python wrapper around cvodes (from the sundials library)
   doc_url: https://bjodah.github.io/{{ name }}/latest
