add upper bound to build req. too

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
   host:
     - libblas
     - liblapack
-    - sundials
+    - sundials <7
     - python
     - setuptools
     - pip
